[package]
name = "vial"
description = "a micro micro-framework"
homepage = "https://vial.rs"
repository = "https://github.com/xvxx/vial"
version = "0.1.11"
authors = ["chris west <c@xvxx.io>"]
documentation = "https://docs.rs/vial/"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["http", "vial", "web", "framework"]
exclude = [
    "examples/*",
    "tests/*",
    "docs/*",
]

[package.metadata.release]
consolidate-commits = true
dev-version-ext = "dev"
pre-release-replacements = [
  {file="CHANGELOG.md", search="\\$Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\$ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [$Unreleased] - $ReleaseDate"},
]

[[example]]
name = "cookies"
path = "examples/cookies.rs"
required-features = ["cookies"]

[[example]]
name = "hatter"
path = "examples/hatter.rs"
required-features = ["hatter"]

[[example]]
name = "horror"
path = "examples/horror.rs"
required-features = ["horror"]

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["json_serde"]

[[example]]
name = "state"
path = "examples/state.rs"

[[example]]
name = "filters"
path = "examples/filters.rs"

[features]
horror = ['horrorshow']
json_serde = ['serde', 'serde_json']
state = []
cookies = ['basic-cookies']
default = []
compression = ['libflate', 'brotli2', 'zstd', 'http', 'fly-accept-encoding']

[dependencies]
threadfin = "0.1.0"
libc-strftime = "0.2.0"

basic-cookies = { version = "0.1.4", optional = true }
hatter = { version = "0.1.1", optional = true }
horrorshow = { version = "0.8.3", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
libflate = { version = "1.1.1", optional = true } #gzip and deflate
fly-accept-encoding = { version = "0.2.0-alpha.5", optional = true } 
brotli2 = { version = "*", optional = true }
zstd = { version = "*", optional = true }
http = { version = "*", optional = true }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[target.'cfg(unix)'.dev-dependencies] # pprof relies on nix
pprof = { version = "0.6.1", features = ["criterion", "flamegraph", "protobuf"] }

[[bench]]
name = "benchmark"
harness = false
